2011-05-02  Paul Smith  <psmith@gnu.org>

	* make.h: Make global variable stack_limit extern.
	Fixes Savannah bug #32753.

2011-05-01  Paul Smith  <psmith@gnu.org>

	* read.c (parse_file_seq): Don't try to invoke glob() unless there
	are potential wildcard characters in the filename.  Performance
	enhancement suggested by Michael Meeks <michael.meeks@novell.com>

2011-04-29 Boris Kolpackov  <boris@codesynthesis.com>

	* read.c (eval_makefile): Delay caching of the file name until after
	all the expansions and searches.

2011-04-17  David A. Wheeler  <dwheeler@dwheeler.com>

	* doc/make.texi (Reading Makefiles): Document "!=".
	(Setting): Ditto.
	(Features): Ditto.
	* variable.h (enum variable_flavor): New type "f_shell".
	* variable.c (shell_result): Send a string to the shell and store
	the output.
	(do_variable_definition): Handle f_shell variables: expand the
	value, then send it to the shell and store the result.
	(parse_variable_definition): Parse "!=" shell assignments.
	* read.c (get_next_mword): Treat "!=" as a varassign word.
	* function.c (fold_newlines): If trim_newlines is set remove all
	trailing newlines; otherwise remove only the last newline.
	(func_shell_base): Move the guts of the shell function here.
	(func_shell): Call func_shell_base().

2011-02-21  Paul Smith  <psmith@gnu.org>

	* strcache.c (various): Increase performance based on comments
	from Ralf Wildenhues <Ralf.Wildenhues@gmx.de>.  Stop looking for
	a buffer when we find the first one that fits, not the best fit.
	If there is not enough free space in a buffer move it to a
	separate list so we don't have to walk it again.
	* make.h (NDEBUG): Turn off asserts unless maintainer mode is set.
	(strcache_add_len, strcache_setbufsize): Use unsigned length/size.
	* maintMakefile (AM_CPPFLAGS): Enable MAKE_MAINTAINER_MODE.

	* remake.c (complain): Move translation lookups closer to use.

2011-02-13  Paul Smith  <psmith@gnu.org>

	* doc/make.texi: Clean up references to "static" variables and