@@ -1,55 +1,47 @@
-$description = "The following test creates a makefile to verify\n"
-              ."the ability of make to sort lists of object. Sort\n"
-              ."will also remove any duplicate entries. This will also\n"
-              ."be tested.";
+#                                                                    -*-perl-*-
 
-$details = "The make file is built with a list of object in a random order\n"
-          ."and includes some duplicates. Make should sort all of the elements\n"
-          ."remove all duplicates\n";
+$description = "The following test creates a makefile to verify
+the ability of make to sort lists of object. Sort
+will also remove any duplicate entries. This will also
+be tested.";
 
-open(MAKEFILE,"> $makefile");
+$details = "The make file is built with a list of object in a random order
+and includes some duplicates. Make should sort all of the elements
+remove all duplicates\n";
 
-# The Contents of the MAKEFILE ...
+run_make_test('
+foo := moon_light days
+foo1:= jazz
+bar := captured 
+bar2 = boy end, has rise A midnight 
+bar3:= $(foo)
+s1  := _by
+s2  := _and_a
+t1  := $(addsuffix $(s1), $(bar) )
+t2  := $(addsuffix $(s2), $(foo1) )
+t3  := $(t2) $(t2) $(t2) $(t2) $(t2) $(t2) $(t2) $(t2) $(t2) $(t2) 
+t4  := $(t3) $(t3) $(t3) $(t3) $(t3) $(t3) $(t3) $(t3) $(t3) $(t3) 
+t5  := $(t4) $(t4) $(t4) $(t4) $(t4) $(t4) $(t4) $(t4) $(t4) $(t4) 
+t6  := $(t5) $(t5) $(t5) $(t5) $(t5) $(t5) $(t5) $(t5) $(t5) $(t5) 
+t7  := $(t6) $(t6) $(t6) 
+p1  := $(addprefix $(foo1), $(s2) )
+blank:= 
+all:
+	@echo $(sort $(bar2) $(foo)  $(addsuffix $(s1), $(bar) ) $(t2) $(bar2) $(bar3))
+	@echo $(sort $(blank) $(foo) $(bar2) $(t1) $(p1) )
+	@echo $(sort $(foo) $(bar2) $(t1) $(t4) $(t5) $(t7) $(t6) )
+',
+              '', 'A boy captured_by days end, has jazz_and_a midnight moon_light rise
+A boy captured_by days end, has jazz_and_a midnight moon_light rise
+A boy captured_by days end, has jazz_and_a midnight moon_light rise
+');
 
-print MAKEFILE "foo := moon_light days \n"
-              ."foo1:= jazz\n"
-              ."bar := captured \n"
-              ."bar2 = boy end, has rise A midnight \n"
-              ."bar3:= \$(foo)\n"
-              ."s1  := _by\n"
-              ."s2  := _and_a\n"
-              ."t1  := \$(addsuffix \$(s1), \$(bar) )\n"
-              ."t2  := \$(addsuffix \$(s2), \$(foo1) )\n" 
-              ."t3  := \$(t2) \$(t2) \$(t2) \$(t2) \$(t2) \$(t2) \$(t2) \$(t2) \$(t2) \$(t2) \n"
-              ."t4  := \$(t3) \$(t3) \$(t3) \$(t3) \$(t3) \$(t3) \$(t3) \$(t3) \$(t3) \$(t3) \n"
-              ."t5  := \$(t4) \$(t4) \$(t4) \$(t4) \$(t4) \$(t4) \$(t4) \$(t4) \$(t4) \$(t4) \n"
-              ."t6  := \$(t5) \$(t5) \$(t5) \$(t5) \$(t5) \$(t5) \$(t5) \$(t5) \$(t5) \$(t5) \n"
-              ."t7  := \$(t6) \$(t6) \$(t6) \n"
-              ."p1  := \$(addprefix \$(foo1), \$(s2) )\n"
-              ."blank:= \n"
-              ."all:\n"
-              ."\t\@echo \$(sort \$(bar2) \$(foo)  \$(addsuffix \$(s1), \$(bar) ) \$(t2) \$(bar2) \$(bar3))\n"
-              ."\t\@echo \$(sort \$(blank) \$(foo) \$(bar2) \$(t1) \$(p1) )\n"
-              ."\t\@echo \$(sort \$(foo) \$(bar2) \$(t1) \$(t4) \$(t5) \$(t7) \$(t6) )\n";
 
+# Test with non-space/tab whitespace.  Note that you can't see the
+# original bug except using valgrind.
 
-# END of Contents of MAKEFILE
-
-close(MAKEFILE);
-
-&run_make_with_options($makefile,"",&get_logfile);
-
-# Create the answer to what should be produced by this Makefile
-$answer = "A boy captured_by days end, has jazz_and_a midnight moon_light rise\n"
-         ."A boy captured_by days end, has jazz_and_a midnight moon_light rise\n"
-         ."A boy captured_by days end, has jazz_and_a midnight moon_light rise\n";
-
-&compare_output($answer,&get_logfile(1));
+run_make_test("FOO = a b\tc\rd\fe \f \f \f \f \ff
+all: ; \@echo \$(words \$(sort \$(FOO)))\n",
+              '', "5\n");
 
 1;
-
-
-
-
-
-
